@startuml

package "com.studentspace.sscore.security" {
    class ApplicationConfiguration {
        - userService: UserService
        + ApplicationConfiguration(userService: UserService)
        + userDetailsService(): UserDetailsService
    }

    class JwtAuthenticationFilter {
        - handlerExceptionResolver: HandlerExceptionResolver
        - jwtService: JwtService
        - userDetailsService: UserDetailsService
        - userService: UserService
        + doFilterInternal(request: HttpServletRequest, response: HttpServletResponse, filterChain: FilterChain): void
    }

    class JwtService {
        - secretKey: String
        - jwtExpiration: long
        + extractUserId(token: String): String
        + extractClaim(token: String, claimsResolver: Function<Claims, T>): T
        + getExpirationTime(): long
        + generateToken(user: User): String
        + validateToken(token: String): boolean
    }

    class PasswordEncryption {
        + encryptPassword(password: String): String
        + encryptPasswordMatch(password: String, encryptedPassword: String): boolean
    }

    class SecurityConfiguration {
        + apiFilterChain(http: HttpSecurity): SecurityFilterChain
    }
}

ApplicationConfiguration --> UserService : uses
JwtAuthenticationFilter --> JwtService : uses
JwtAuthenticationFilter --> UserDetailsService : uses
JwtAuthenticationFilter --> UserService : uses

@enduml
